--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@expo-google-fonts/rubik": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@react-navigation/native": "^7.0.0",
     "@tabler/icons-react-native": "^3.24.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.18",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
-    "expo-router": "4.0.11",
+    "expo-router": "^3.1.0",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
@@ -31,14 +33,17 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-svg": "15.8.0"
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "1.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "metro": "^0.81.0",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.3.3"
   },
